fix(OMN-2256): local review fixes for pattern compliance node
- Restructure node.py to pure declarative shell (no __init__ overrides)
- Rename file_path to source_path (canonical ONEX field name)
- Remove dead _SYSTEM_PROMPT from handler_compliance.py
- Add node_pattern_compliance_compute to EXPECTED_NODE_DIRS registry

--- a/src/omniintelligence/nodes/node_pattern_compliance_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_compliance_compute/contract.yaml
@@ -35,7 +35,7 @@ operations:
   - name: "evaluate_compliance"
     description: "Evaluate code compliance against applicable patterns"
     input_fields:
-      - file_path
+      - source_path
       - content
       - language
       - applicable_patterns
