fix(OMN-2256): thread correlation_id and add protocol conformance assertions
Address CodeRabbit review findings:
- Add correlation_id (UUID) to ModelComplianceRequest and propagate it
  through handler, metadata output, and error paths for end-to-end tracing
- Add ProtocolLlmClient isinstance assertions to mock LLM clients in tests
- Update contract.yaml input_fields to include correlation_id

--- a/src/omniintelligence/nodes/node_pattern_compliance_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_compliance_compute/contract.yaml
@@ -34,6 +34,7 @@ operations:
   - name: "evaluate_compliance"
     description: "Evaluate code compliance against applicable patterns"
     input_fields:
+      - correlation_id
       - source_path
       - content
       - language
