fix(OMN-2270): update contract metadata for processing_errors and idempotency
- Add processing_errors to output_fields in handler_routing and io_operations
- Change idempotency strategy from event_id_tracking to best_effort_bounded
  to accurately reflect current behavior

--- a/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
@@ -76,6 +76,7 @@ handler_routing:
         - violations_found
         - confirmed_violations
         - adjustments
+        - processing_errors
         - processed_at
         - error_message
 
@@ -100,6 +101,7 @@ io_operations:
       - violations_found
       - confirmed_violations
       - adjustments
+      - processing_errors
       - processed_at
       - error_message
 
@@ -166,7 +168,7 @@ event_bus:
 # =============================================================================
 idempotency:
   enabled: true
-  strategy: "event_id_tracking"
+  strategy: "best_effort_bounded"
   hash_fields: ["correlation_id", "session_id"]
   description: >
     Each enforcement event is uniquely identified by (correlation_id, session_id). The quality_score adjustment
