fix(review): [minor] align enforcement contract subscribe topic style and fix integration stubs
Remove {env}. prefix from enforcement feedback contract subscribe_topics
to match the bare topic style used in promotion and demotion contracts.
Replace unconditional NotImplementedError raises in integration test
stubs with pytest.skip so tests gracefully skip when infrastructure is
available rather than erroring.

--- a/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
@@ -154,12 +154,12 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "{env}.onex.evt.omniclaude.pattern-enforcement.v1"
+    - "onex.evt.omniclaude.pattern-enforcement.v1"
 
   publish_topics: []
 
   subscribe_topic_metadata:
-    "{env}.onex.evt.omniclaude.pattern-enforcement.v1":
+    "onex.evt.omniclaude.pattern-enforcement.v1":
       schema_ref: "omniintelligence.nodes.node_enforcement_feedback_effect.models.ModelEnforcementEvent"
       description: "Pattern enforcement events from omniclaude PostToolUse hook"
 
