--- a/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
@@ -176,6 +176,9 @@ idempotency:
     is small and bounded (-0.01 per violation, floor-clamped at 0.0), so occasional duplicates cause negligible
     drift. Full event_id_tracking deduplication is deferred to a future iteration if duplicate delivery
     causes measurable quality score drift.
+  # Known limitation: duplicate Kafka delivery applies the quality_score adjustment twice.
+  # Mitigation: Full deduplication requires event_id tracking against a seen-events table.
+  # Tracked in: OMN-2270 follow-up.
 
 # =============================================================================
 # CAPABILITIES
