fix(review): [minor] sync contract output_fields with renamed eligible_violations field
Update handler_routing and io_operations output_fields from
confirmed_violations to eligible_violations to match the renamed field
in ModelEnforcementFeedbackResult.

--- a/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
@@ -74,7 +74,7 @@ handler_routing:
         - session_id
         - patterns_checked
         - violations_found
-        - confirmed_violations
+        - eligible_violations
         - adjustments
         - processing_errors
         - processed_at
