fix: remove hardcoded topic_env_prefix from promotion/demotion effects (#121)
* fix: remove hardcoded topic_env_prefix from promotion/demotion effects

The promotion and demotion effect nodes concatenated a hardcoded "dev"
prefix with topic constants to build Kafka topic names at runtime
(e.g. "dev.onex.cmd..."). The rest of the pipeline uses constants
directly without any prefix. This inconsistency was a leftover from
early development that was never wired to configuration.

Remove topic_env_prefix everywhere:
- Handler function signatures and validation blocks
- Registry frozen dataclass fields and factory methods
- Node docstrings, __init__.py examples, contract.yaml
- All test files (rewrite prefix-assertion tests, delete one obsolete test)
- Fix pre-existing broken constant reference (TOPIC_SUFFIX → TOPIC rename)

All topics now use constants directly, consistent with the rest of the
codebase. 15 files changed, -211 net lines.

* fix(review): [minor] align demotion constant name and contract topic patterns

- Rename TOPIC_SUFFIX_PATTERN_LIFECYCLE_V1 → TOPIC_PATTERN_LIFECYCLE_CMD_V1 in
  handler_demotion.py to match promotion handler naming convention
- Update docstring from "Topic suffix" to "Canonical topic" to match semantics
- Remove {env}. prefix from contract.yaml publish_topics and output_topics to
  match what the handler actually emits at runtime

* fix(review): [minor] consolidate TOPIC_PATTERN_LIFECYCLE_CMD_V1 to constants.py

- Move TOPIC_PATTERN_LIFECYCLE_CMD_V1 from both handler_promotion.py and
  handler_demotion.py into the canonical constants.py to eliminate duplication
- Import from omniintelligence.constants in both handler files
- Update test imports to reference constants.py instead of handler module
- Remove redundant hardcoded string assertions in test_promotion.py and
  test_promotion_integration.py (constant-based assertions are sufficient)

* feat(intent-classifier): wire langextract and fix confidence normalization

- Fix classify_inte

--- a/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
@@ -54,12 +54,12 @@ output_models:
   - name: "ModelPromotionCheckResult"
     module: "omniintelligence.nodes.node_pattern_promotion_effect.models"
     operation: "check_and_promote"
-    topic: "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    topic: "onex.evt.omniintelligence.pattern-promoted.v1"
     description: "Aggregated result of promotion check operation."
   - name: "ModelPromotionResult"
     module: "omniintelligence.nodes.node_pattern_promotion_effect.models"
     operation: "promote_pattern"
-    topic: "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
+    topic: "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
     description: "Individual pattern promotion result with gate snapshot."
 
 # =============================================================================
@@ -138,14 +138,13 @@ io_operations:
     description: "Check all provisional patterns and promote eligible ones"
     input_model: "ModelPromotionCheckRequest"
     output_model: "ModelPromotionCheckResult"
-    output_topic: "{env}.onex.evt.omniintelligence.pattern-promoted.v1"
+    output_topic: "onex.evt.omniintelligence.pattern-promoted.v1"
     input_fields:
       - dry_run
       - correlation_id
       - min_injection_count
       - min_success_rate
       - max_failure_streak
-      - topic_env_prefix
     output_fields:
       - dry_run
       - patterns_checked
@@ -157,12 +156,11 @@ io_operations:
     description: "Promote a single pattern via lifecycle event"
     input_model: "ModelPromotionCheckRequest"
     output_model: "ModelPromotionResult"
-    output_topic: "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
+    output_topic: "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
     input_fields:
       - pattern_id
       - pattern_data
       - correlation_id
-      - topic_env_prefix
     output_fields:
       - pattern_id
       - pattern_signature
@@ -221,11 +219,11 @@ event_bus:
 
   # Topics this node publishes to (sends events to)
   publish_topics:
-    - "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
+    - "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1"
 
   # Metadata for published topics
   publish_topic_metadata:
-    "{env}.onex.cmd.omniintelligence.pattern-lifecycle-transition.v1":
+    "onex.cmd.omniintelligence.pattern-lifecycle-transition.v1":
       schema_ref: "omniintelligence.models.events.ModelPatternLifecycleEvent"
       description: "Lifecycle event for pattern status transitions (promote, demote)"
       content_type: "application/json"
