--- a/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_enforcement_feedback_effect/contract.yaml
@@ -74,7 +74,7 @@ handler_routing:
         - session_id
         - patterns_checked
         - violations_found
-        - confirmed_violations
+        - eligible_violations
         - adjustments
         - processing_errors
         - processed_at
@@ -154,12 +154,12 @@ event_bus:
   event_bus_enabled: true
 
   subscribe_topics:
-    - "{env}.onex.evt.omniclaude.pattern-enforcement.v1"
+    - "onex.evt.omniclaude.pattern-enforcement.v1"
 
   publish_topics: []
 
   subscribe_topic_metadata:
-    "{env}.onex.evt.omniclaude.pattern-enforcement.v1":
+    "onex.evt.omniclaude.pattern-enforcement.v1":
       schema_ref: "omniintelligence.nodes.node_enforcement_feedback_effect.models.ModelEnforcementEvent"
       description: "Pattern enforcement events from omniclaude PostToolUse hook"
 
@@ -176,6 +176,9 @@ idempotency:
     is small and bounded (-0.01 per violation, floor-clamped at 0.0), so occasional duplicates cause negligible
     drift. Full event_id_tracking deduplication is deferred to a future iteration if duplicate delivery
     causes measurable quality score drift.
+  # Known limitation: duplicate Kafka delivery applies the quality_score adjustment twice.
+  # Mitigation: Full deduplication requires event_id tracking against a seen-events table.
+  # Tracked in: OMN-2270 follow-up.
 
 # =============================================================================
 # CAPABILITIES
