fix(review): [OMN-2339] contract llm_client required->false, rename stale test method names
- Set llm_client required: false in contract.yaml to match actual runtime behavior;
  the dispatch handler degrades gracefully returning structured llm_error results
  when llm_client=None, so required: true was incorrect
- Rename test_engine_has_five_handlers -> test_engine_has_six_handlers
- Rename test_engine_has_seven_routes -> test_engine_has_eight_routes

--- a/src/omniintelligence/nodes/node_compliance_evaluate_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_compliance_evaluate_effect/contract.yaml
@@ -90,10 +90,11 @@ dependencies:
     type: "protocol"
     class_name: "ProtocolLlmClient"
     module: "omniintelligence.nodes.node_pattern_compliance_effect.handlers.protocols"
-    required: true
+    required: false
     description: >-
       OpenAI-compatible LLM client for compliance evaluation (Coder-14B). Forwarded to handle_evaluate_compliance()
-      from node_pattern_compliance_effect.
+      from node_pattern_compliance_effect. When unavailable (None), the dispatch handler returns a structured
+      llm_error result rather than raising, so evaluations degrade gracefully without a live LLM.
   - name: "kafka_producer"
     type: "protocol"
     class_name: "ProtocolKafkaPublisher"
