ci: increase pre-commit timeout and enable setup-uv built-in cache
The pre-commit job was being cancelled at its 10-minute timeout while
running `uv sync` with 197 packages on cold cache. Two fixes:

1. Increase pre-commit job timeout: 10 → 20 minutes to handle cold-cache runs
2. Enable setup-uv built-in cache (enable-cache: true, cache-dependency-glob: uv.lock)
   on all 8 jobs that run uv sync — this is more reliable than the manual
   actions/cache@v4 fallback and makes warm-cache runs take seconds instead of minutes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -112,7 +112,7 @@ jobs:
   pre-commit:
     name: Pre-commit Hooks
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 20
 
     steps:
       - name: Checkout code
@@ -127,6 +127,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -182,6 +184,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -226,6 +230,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -273,6 +279,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -352,6 +360,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -409,6 +419,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -505,6 +517,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
@@ -548,6 +562,8 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           version: ${{ env.UV_VERSION }}
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Cache uv dependencies
         uses: actions/cache@v4
