fix(review): [major] set kafka_producer required: true in contract.yaml files
The CLAUDE.md example was updated to show required: true for kafka_producer
to reflect the Kafka-required infrastructure invariant, but the actual
contract.yaml files for node_pattern_promotion_effect and
node_pattern_storage_effect still had required: false with descriptions
calling Kafka "optional." Updated both to required: true and corrected
the descriptions to remove the contradictory fallback language.

--- a/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_promotion_effect/contract.yaml
@@ -243,9 +243,9 @@ dependencies:
     type: "protocol"
     class_name: "ProtocolKafkaPublisher"
     module: "omniintelligence.nodes.node_pattern_promotion_effect.handlers.handler_promotion"
-    description: "Kafka producer for emitting lifecycle events. OPTIONAL - when unavailable, falls back
-      to direct database UPDATE per ONEX invariant."
-    required: false
+    description: "Kafka producer for emitting pattern lifecycle events. Required infrastructure per ONEX
+      invariant."
+    required: true
 
 # =============================================================================
 # PROMOTION GATES CONFIGURATION
