--- a/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_storage_effect/contract.yaml
@@ -303,8 +303,9 @@ dependencies:
     type: "protocol"
     class_name: "ProtocolKafkaProducer"
     module: "omnibase_infra.protocols.protocol_kafka_producer"
-    description: "Kafka producer for emitting pattern storage events"
-    required: false
+    description: "Kafka producer for emitting pattern storage events. Required infrastructure per ONEX
+      invariant."
+    required: true
 
 # =============================================================================
 # ERROR HANDLING
